# keystone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ONE_SHOT_PROMPT.md  README.md  TODO.md  bootstrap_devcontainer.py  github_datasets  htpasswd  pyproject.toml  pyrightconfig.json  pytest.ini
.agents/: settings.local.json
.beads/: issues.jsonl
.github/workflows/: publish.yml
bootstrap_devcontainer/: pyproject.toml
bootstrap_devcontainer/sample_projects/cmake_vcpkg_project/: CMakeLists.txt  vcpkg.json
bootstrap_devcontainer/sample_projects/cmake_vcpkg_project/src/: greeter.cpp
bootstrap_devcontainer/tests/: fake_agent.py  test_bootstrap.py
eval/: README.md  cli.py  config.py  flow.py  modal_worker.py  pyproject.toml  test_local_worker.py
evals/: README.md  __init__.py  cli.py  config.py  delete_failed_runs_cli.py  eval_cli.py  eval_schema.py  flow.py  mutation_flow.py  pyproject.toml  test_config_parsing.py  test_eval_cli_fake_agents.py  test_eval_flow.py  test_local_worker.py  test_tiny_codex.py  worker.py
evals/eda/: .gitignore  README.md  cat_eval_analysis.py  cdf_plot.py  eval_parcoords.html  eval_to_parquet_cli.py  filtered_repos.jsonl  merge_repo_lists.py  (+12 more)
keystone/: README.md  pyproject.toml  pyrightconfig.json
modal_registry/: README.md  app.py  build_caching_test.py  load_test.py  load_test_v2.py  registry_config.yml
scripts/: modal_docker_cache.py  modal_registry.py  pytest-discovery  run-all-tests  test_buildkit_cache.py  typecheck
tests/: fake_agent.py  test_agent_log.py  test_bootstrap.py
timestamp_process_output/: test_timestamp_process_output.t  timestamp_process_output.pl
(+126 files in other folders)
